charts/guestbook/ingress/ingress-guestbook-notls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-server-ingress
  namespace: test
  annotations:
    spec.ingressClassName: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: guestbook.devops.taipei
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook
            port:
              number: 80
