charts/guestbook/ingress/test-notls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server-ingress
  namespace: lens-metrics
  annotations:
    spec.ingressClassName: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus.devops.taipei
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 80
